2018-04-10  Carl Hetherington  <cth@carlh.net>

	* Fix disappearing subtitles when they are added from text files
	alongside video content which also contain subtitles (#1271).

2018-04-05  Carl Hetherington  <cth@carlh.net>

	* Fix crash on startup if there are no audio devices (#1265).

	* Fix missing start icon for the player in Linux.

	* Fix 3D DCP handling in the player.

2018-04-05  Carl Hetherington  <cth@carlh.net>

	* Updated zh_CN translation from 刘汉源.

2018-03-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.3 released.

2018-03-24  Carl Hetherington  <cth@carlh.net>

	* Fix crash when changing DCP audio channel count (#1253).

	* Fix update checker error when there is no test
	version.

	* Updated fr_FR translation from Thierry Journet.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.2 released.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Version 2.12.1 released.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.0 released.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.79 released.

2018-03-21  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2018-03-19  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.78 released.

2018-03-16  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.77 released.

2018-03-16  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.76 released.

2018-03-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.75 released.

2018-03-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.74 released.

2018-03-13  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.73 released.

2018-02-27  Carl Hetherington  <cth@carlh.net>

	* Add a hint about the stereo-to-5.1 upmixers being
	`experimental'.

2018-03-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.72 released.

2018-03-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.71 released.
