@@ -1,3 +1,11 @@
+2018-04-12  Carl Hetherington  <cth@carlh.net>
+
+	* Prevent error when starting export without specifying a filename (#1260).
+
+2018-04-11  Carl Hetherington  <cth@carlh.net>
+
+	* Fix 3D DCP handling in the player.
+
 2018-04-10  Carl Hetherington  <cth@carlh.net>
 
 	* Fix disappearing subtitles when they are added from text files
